--- a/ci.yml
+++ b/ci.yml
@@ -10,8 +10,10 @@ on:
 
 jobs:
   build:
-    permissions: write-all
     runs-on: ubuntu-latest
+    permissions:
+        contents: read
+        packages: write
 
     steps:
       - name: Checkout code
